--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Spaces_Partial.cshtml
@@ -19,11 +19,9 @@
             <th>Description</th>
             <th>Type</th>
             <th>Storey</th>
-            <th>Length</th>
-            <th>Width</th>
-            <th>Walls Height</th>
-            <th>Position X</th>
-            <th>Position Y</th>
+            @*<th>Length</th>
+            <th>Width</th>*@
+           
         </tr>
     </thead>
     <tbody>
@@ -47,15 +45,15 @@
                     </td>
 
                     <td>
-                        @space.Storey.Label Storey
+                        @space.Storey.Label 
                     </td>
-                    <td>
+                    @*<td>
                         @space.Length m
                     </td>
                     <td>
                         @space.Width m
-                    </td>
-                    <td>
+                    </td>*@
+                    @*<td>
                         @space.WallsHeight m
                     </td>
                     <td>
@@ -63,7 +61,7 @@
                     </td>
                     <td>
                         +@space.PositionY m in Y dir
-                    </td>
+                    </td>*@
                 </tr>
             }
         </div>
