--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
@@ -15,9 +15,9 @@
             <th>Id</th>
             <th>Label</th>
             <th>Description</th>
-            <th>Length</th>
+            @*<th>Length</th>
             <th>Width</th>
-            <th>Level</th>
+            <th>Level</th>*@
         </tr>
         </thead>
         <tbody>
@@ -36,7 +36,7 @@
                 <td>
                     @storey.Description
                 </td>
-                <td>
+                @*<td>
                     @storey.Length  m
                 </td>
                 <td>
@@ -44,7 +44,7 @@
                 </td>
                 <td>
                     +@storey.Level  m
-                </td>
+                </td>*@
             </tr>
         }
         </div>
