--- a/BuildingFacilityManager/Areas/Org/Views/Dashboard/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Org/Views/Dashboard/Index.cshtml
@@ -13,6 +13,7 @@
 
 
 @Html.Partial("ChangeStatus_Partial")
+@Html.Partial("PurchaseRequest_Partial")
 
 @Html.Partial("MyTodayWorkOrders_Partial")
 @Html.Partial("MyAllWorkOrders_Partial")
