--- a/BuildingFacilityManager/Areas/Org/Views/Dashboard/MyTodayWorkOrders_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Org/Views/Dashboard/MyTodayWorkOrders_Partial.cshtml
@@ -91,7 +91,7 @@
                                 </button>
                                 <br />
                                 <br />
-                                <button type="button" title="Purchase Request" style="background-color: #66cdaa; background-repeat: no-repeat; border: none;cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#">
+                                <button type="button" title="Purchase Request" style="background-color: #66cdaa; background-repeat: no-repeat; border: none;cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#PurchaseRequest" onclick="purchaseRequestFunc(@work.Id)">
                                     <span class="fas fa-shopping-cart" aria-hidden="true"></span>
                                 </button>
                             }
