--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Add_Storey_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Add_Storey_Partial.cshtml
@@ -48,7 +48,7 @@
                             @Html.ValidationMessageFor(e => e.Storey.Description)
 
                         </div>
-                        <div>
+                        @*<div>
                             @Html.LabelFor(e => e.Storey.Length)
                             @Html.TextBoxFor(e => e.Storey.Length, new {@class = "form-control", placeholder = "Enter length in Meter"})
                             @Html.ValidationMessageFor(e => e.Storey.Length)
@@ -65,7 +65,7 @@
                             @Html.TextBoxFor(e => e.Storey.Level, new {@class = "form-control", placeholder="Enter the Level of the Storey in Meter"})
                             @Html.ValidationMessageFor(e => e.Storey.Level)
 
-                        </div>
+                        </div>*@
                     </div>
 
                 </div>
