Adding the Costs Module

--- a/BuildingFacilityManager/Areas/Admin/Views/Cost/MyTodayCompletedPurchaseOrders_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Cost/MyTodayCompletedPurchaseOrders_Partial.cshtml
@@ -2,7 +2,7 @@
 
 <hr />
 <br />
-<h3>Today's Completed Purchase Orders</h3>
+<h3>Today's Purchase Work Orders ( Costs are : @Model.TodayPurchasesOrdersCost EGP) </h3>
 
 <div class="thumbnail">
 
