--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
@@ -1,4 +1,9 @@
 ﻿@model BuildingFacilityManager.ViewModels.DashBoardViewModel
+<style type="text/css">
+    .col-xl-3.col-sm-6.mb-3 {
+        padding-bottom: 5px;
+    }
+</style>
 <h3>Today's new Stats</h3>
 
 <div class="row">
@@ -39,7 +44,7 @@
 
 
     <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-success o-hidden h-100">
+        <div class="card text-white bg-warning o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fas fa-plus-square"></i>
@@ -56,3 +61,46 @@
     </div>
 
 </div>
+
+<br/>
+<div class="row">
+    <div class="charts-center">
+        
+        <div class="col-sm-4 mb-3">
+            <div class="card text-white bg-success o-hidden h-100">
+                <div class="card-body">
+                    <div class="card-body-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
+                    <div class="mr-5">(@Model.TodayCompletedPurchaseOrders.Count) new Purchase Orders</div>
+                </div>
+                <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index","Cost")">
+                    <span class="float-left">View Details</span>
+                    <span class="float-right">
+                        <i class="fas fa-angle-right"></i>
+                    </span>
+                </a>
+            </div>
+        </div>
+        
+
+        <div class="col-sm-4 mb-3">
+            <div class="card text-white bg-danger o-hidden h-100">
+                <div class="card-body">
+                    <div class="card-body-icon">
+                        <i class="fas fa-clipboard-list"></i>
+                    </div>
+                    <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders</div>
+                </div>
+                <a class="card-footer text-white clearfix small z-1" href="#workOrderTableToday">
+                    <span class="float-left">View Details</span>
+                    <span class="float-right">
+                        <i class="fas fa-angle-right"></i>
+                    </span>
+                </a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
