--- a/BuildingFacilityManager/Areas/Purchase/Views/Dashboard/Index.cshtml
+++ b/BuildingFacilityManager/Areas/Purchase/Views/Dashboard/Index.cshtml
@@ -14,9 +14,13 @@
 
 @Html.Partial("ChangeStatus_Partial")
 
+@Html.Partial("AddPurchaseOrder_Partial")
+
 @Html.Partial("MyTodayWaitingPurchaseOrders_Partial")
 
 @Html.Partial("MyTodayCompletedPurchaseOrders_Partial")
+
+@*@Html.Partial("AllCompletedPurchaseOrders_Partial")*@
 
 
 @section styles {
