--- a/BuildingFacilityManager/Areas/Purchase/Views/Dashboard/AllCompletedPurchaseOrders_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Purchase/Views/Dashboard/AllCompletedPurchaseOrders_Partial.cshtml
@@ -2,24 +2,23 @@
 
 <hr />
 <br />
-<h3>Today's Completed Purchase Orders</h3>
+<h3>All Completed Purchase Work Orders</h3>
 
 <div class="thumbnail">
 
     <div class="caption">
         <table class="table table-hover table-bordered" id="CompletedPurchaseToday">
             <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th>Cost</th>
-                    <th>Work Order Id</th>
-                </tr>
+            <tr>
+                <th>Id</th>
+                <th>Description</th>
+                <th>Date</th>
+                <th>Cost</th>
+            </tr>
             </thead>
             <tbody>
-                @foreach (var purchaseOrder in Model.TodayCompletedPurchaseOrders)
-                {
+            @foreach (var purchaseOrder in Model.AllCompletedPurchaseOrders)
+            {
 
                 <tr id="id-@purchaseOrder.Id">
 
@@ -42,7 +41,7 @@
                     </td>
                     
                 </tr>
-                }
+            }
             </tbody>
         </table>
     </div>
