--- a/BuildingFacilityManager/Areas/Admin/Views/Asset/SingleAssetDetails_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Asset/SingleAssetDetails_Partial.cshtml
@@ -59,6 +59,12 @@
                     </span>
                     <hr />
                     <span class="asset-details-data">Price</span>: <span>@Model.Asset.Price EGP</span>
+                    <hr />
+                    <span class="asset-details-data">Vendor Contact</span>: <span>
+
+                        <a href="mailto:@Model.Asset.VendorContact">@Model.Asset.VendorContact</a>
+
+                    </span>
 
                 </div>
             </div>
