--- a/BuildingFacilityManager/Areas/Inspector/Views/Asset/SpaceAssets.cshtml
+++ b/BuildingFacilityManager/Areas/Inspector/Views/Asset/SpaceAssets.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Antlr.Runtime.Tree
+@using BuildingFacilityManager.Models.Assets.Enums
 @model List<BuildingFacilityManager.Models.Assets.Asset>
 @{
     ViewBag.Title = ViewBag.spaceLabel;
@@ -38,7 +39,15 @@
                 </td>
                 <td>
                     @Html.ActionLink("View Details", "AssetsDetails", new { id = asset.Id }, new { @class = "btn btn-success" })
-                    @Html.ActionLink("Add Work Order", "AddWorkOrderFromSpaceAssetsForm", new { id = asset.Id }, new { @class = "btn btn-danger" })
+                    @Html.ActionLink("Add Work Order", "AddWorkOrderFromSpaceAssetsForm", new { id = asset.Id }, new { @class = "btn btn-primary" })
+                
+                    @{
+                        if (asset.AssetType == AssetType.AirCondition || asset.AssetType == AssetType.Machines || asset.AssetType == AssetType.FireFighting || asset.AssetType == AssetType.ElevatorCabinet)
+                        {
+                            @Html.ActionLink("Drop Health Report", "HealthReportOfAssets", new { id = asset.Id }, new { @class = "btn btn-danger" })
+
+                        }
+                    }
                 </td>
             </tr>
         }
