--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
@@ -3,8 +3,40 @@
     .col-xl-3.col-sm-6.mb-3 {
         padding-bottom: 5px;
     }
+
+    .horizontal .progress-bar {
+        float: left;
+        height: 45px;
+        width: 100%;
+        padding: 12px 0;
+    }
+
+    .horizontal .progress-track {
+        position: relative;
+        width: 100%;
+        height: 20px;
+        background: #ebebeb;
+    }
+
+    .horizontal .progress-fill {
+        position: relative;
+        background: #825;
+        height: 20px;
+        width: 50%;
+        color: #fff;
+        text-align: center;
+        font-family: "Lato","Verdana",sans-serif;
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .rounded .progress-track,
+    .rounded .progress-fill {
+        border-radius: 3px;
+        box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+    }
 </style>
-<h3>Today's new Stats</h3>
+
 
 <div class="row">
     <div class="col-sm-4 mb-3">
@@ -62,10 +94,10 @@
 
 </div>
 
-<br/>
+<br />
 <div class="row">
     <div class="charts-center">
-        
+
         <div class="col-sm-4 mb-3">
             <div class="card text-white bg-success o-hidden h-100">
                 <div class="card-body">
@@ -82,24 +114,8 @@
                 </a>
             </div>
         </div>
-        
 
-        <div class="col-sm-4 mb-3">
-            <div class="card text-white bg-danger o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-clipboard-list"></i>
-                    </div>
-                    <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#workOrderTableToday">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
+
 
     </div>
 </div>
